--- a/develop/assets/css/style.css
+++ b/develop/assets/css/style.css
@@ -1,592 +1,141 @@
 :root {
-  --primary-color: #fce138;
-  --secondary-color: #024e76;
-  --tertiary-color: #39a6b2;
+
+    /* Pallet Colors - Blender 3 */
+    --silver-sand: #bbbdbe;
+    --java: #1ec8c8;
+    --bunker: #070b0e;
+    --corduroy: #585a5a;
+    --blue-dianne: #215953;
+    --outer-space: #2b2c2c;
+    --calypso: #307888;
+    --lochinvar: #278678;
+    --big-stone: #193a48;
+    --goblin: #41864b;
+    --black: #000000;
+    --iron: #e1e5e5;
+    --black-pearl: #08202b;
+    --atoll: #0d7265;
+    --turquoise: #27d7dd;
+    --robins-egg-blue: #0ac4c7;
+  }
+  
+  * {
+    box-sizing: border-box;
+    margin: 0;
+    background-color: var(--outer-space);
+  }
+  
+  body {
+    font-family: Helvetica, Arial, sans-serif;
+  }
+
+.top-outer-wrapper{
+    border: 1px var(--atoll) solid;
+    margin-bottom: 4px;
+    }  
+
+.top-wrapper{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px var(--java) solid;
+    padding: 0;
 }
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+.logo-wrapper{
+    width: 100px;
+    height: 100px;
+    transform: rotate(90deg);
+    order:1;
+    border-top: 2px var(--java) solid;
 }
 
-body {
-  color: var(--tertiary-color);
-  font-family: Helvetica, Arial, sans-serif;
+.nav-wrapper {
+    justify-content: flex-end;
+    color: var(--calypso);
+    display: flex;
+    order:5;
+    min-width: 50%;
 }
 
+nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+  }
 
-/* HEADER / NAV BAR STYLES START */
+nav ul li a {
+    padding: 10px 15px;
+    list-style: none;
+    font-weight: lighter;
+    font-size: 1.55vw;
+    text-decoration: none;
+    color: var(--lochinvar);
+    text-shadow: 0 0 10px rgba(170, 34, 34, 0.5);
+  }
+  
+nav ul li a:hover {
+    color: var(--iron);
+    border-radius: 15px;
+    text-shadow: none;
+  }
+  
+
+.middle-outer-wrapper{
+    border: 1px var(--atoll) solid;
+    margin-bottom: 4px;
+    } 
+
+.middle-wrapper{
+    display: flex;
+    flex-wrap: no-wrap;
+    justify-content: flex-start;
+    border: 1px var(--java) solid;
+    align-items: flex-start;
+}
+
+.header-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    order:10;
+    transform: rotate(-180deg);
+    justify-content: flex-start;
+    align-content: center;
+    writing-mode: vertical-lr;
+    width:100px;
+    
+}
 
 header {
-  padding: 20px 35px;
-  background-color: var(--tertiary-color);
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  position: sticky;
-  position: -webkit-sticky;
-  top: 0;
-  background-image: url("../images/hero-bg.jpg");
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: 80%;
-  z-index: 9999;
+margin: 20px 20px 20px 20px;
 }
 
-header h1 {
-  font-weight: bold;
-  margin: 0;
-  font-size: 36px;
-  color: var(--primary-color);
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+header h2{
+    text-decoration: underline dotted;
+    text-decoration-style: var(--corduroy);
 }
 
-header a {
-  text-decoration: none;
-  color: var(--primary-color);
+.main-content {
+    display: flex;
+    flex-wrap: no-wrap;
+    order:20;
+    border-left: 1px var(--atoll) solid;
+    
 }
 
-header nav {
-  margin: 7px 0;
+.menu-card-title {
+    display:flex;
+    flex-wrap: wrap;
+    min-width: 40%;
+    border: 1px var(--java) solid;
 }
 
-header nav ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  list-style: none;
-}
-
-header nav ul li a {
-  padding: 10px 15px;
-  font-weight: lighter;
-  font-size: 1.55vw;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-header nav ul li a:hover {
-  background: var(--primary-color);
-  color: var(--secondary-color);
-  border-radius: 15px;
-  text-shadow: none;
-}
-
-/* HEADER / NAVBAR STYLES END */
-
-
-
-/* FOOTER STYLES START */
 footer {
-  background: var(--primary-color);
-  padding: 40px 35px;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  width: 100%;
-}
-
-footer h2 {
-  color: var(--secondary-color);
-  font-size: 30px;
-  margin: 0;
-}
-
-footer div {
-  line-height: 1.5;
-  text-align: right;
-}
-
-footer a {
-  color: var(--secondary-color);
-}
-/* END FOOTER STYLES */
-
-/* STYLE ALL SECTION TAGS */
-section {
-  padding: 60px;
-}
-
-/* HERO STYLES START */
-.hero {
-  background-image: url('../images/hero-bg.jpg');
-  background-size: cover;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  background-attachment: fixed;
-  background-position: 80%;
-}
-
-.hero-cta {
-  width: 35%;
-  text-align: right;
-  margin: 3.5%;
-  color: #fff;
-  font-size: 18px;
-  line-height: 1.2;
-}
-
-.hero-cta h2 {
-  font-style: italic;
-  font-size: 55px;
-  color: var(--primary-color);
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-.hero-form {
-  border: 3px solid var(--secondary-color);
-  background-color: rgba(255, 225, 56, 0.8);
-  padding: 20px;
-  color: var(--secondary-color);
-  width: 40%;
-  margin: 3.5%;
-  border-radius: 15px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-.hero-form button:hover {
-  background-color: var(--tertiary-color);  
-}
-
-.hero-form h3 {
-  font-size: 24px;
-  margin: 0;
-}
-.hero-form p {
-  margin: 5px 0 15px 0;
-}
-
-.form-input {
-  border: 1px solid var(--secondary-color);
-  display: block;
-  padding: 7px 15px;
-  font-size: 16px;
-  color: var(--secondary-color);
-  width: 100%;
-  margin-bottom: 15px; 
-  border-radius: 10px;
-  background-color: rgba(255,255,255, 0.75);
-}
-
-.form-input:focus {
-  background-color: rgba(255,255,255, 1);
-  outline: none;
-}
-
-.hero-form label {
-  margin: 0 5px;
-}
-
-.hero-form button {
-  color: var(--primary-color);
-  background-color: var(--secondary-color);
-  border: none;
-  padding: 10px 20px;
-  font-size: 16px;
-  border-radius: 10px;
-} 
-
-.checkbox-wrapper input, .radio-wrapper input {
-  opacity: 0;
-}
-
-.checkbox-wrapper label, .radio-wrapper label {
-  position: relative;
-  left: 10px;
-  margin: 10px;
-  line-height: 1.6;
-}
-
-.checkbox-wrapper label::before, .radio-wrapper label::before {
-  content: "";
-  height: 20px;
-  width: 20px;
-  background: rgba(255, 255, 255, 0.75);  
-  border: 1px solid var(--secondary-color);  
-  position: absolute;
-  top: -4px;
-  left: -30px;
-}
-
-.radio-wrapper label::before {
-  border-radius: 50%;
-}
-
-.radio-wrapper label::after {
-  content: "";
-  height: 20px;
-  width: 20px;
-  border-radius: 50%;
-  background: var(--secondary-color);
-  position: absolute;
-  left: -29px;
-  top: -3px;
-  background-image: radial-gradient(circle, var(--tertiary-color), var(--secondary-color));
-}
-
-.checkbox-wrapper label::after {
-  content: "";
-  height: 6px;
-  width: 14px;
-  border-left: 2px solid var(--secondary-color);
-  border-bottom: 2px solid var(--secondary-color);
-  position: absolute;
-  left: -26px;
-  top: 1px;
-  transform: rotate(-58deg);
-}
-
-.checkbox-wrapper input + label::after, 
-.radio-wrapper input + label::after {
-  content: none;
-}
-
-.checkbox-wrapper input:checked + label::after, 
-.radio-wrapper input:checked + label::after {
-  content: "";
-}
-/* HERO STYLES END */
-#myavatar {
-  transform: rotate(90deg);
-  height: 100px;
-  width: 125px;
-}
-
-/* SECTION TITLE STYLES START */
-.section-title {
-  font-size: 48px;
-  border-bottom: 3px solid;
-  color: var(--secondary-color);
-  padding-bottom: 20px;
-  text-align: center;
-  margin: 0 auto 35px auto;
-  width: 50%;
-}
-
-.primary-border {
-  border-color: var(--primary-color);
-}
-
-.secondary-border {
-  border-color: var(--tertiary-color);
-}
-/* SECTION TITLE STYLES END */
-
-/* WHAT WE DO STYLES */
-.intro p {
-  line-height: 1.7;
-  color: var(--tertiary-color);
-  width: 80%;
-  margin: 0 auto;
-  font-size: 20px;
-  text-align: center;
-}
-/* WHAT YOU DO STYLES END */
-
-
-/* WHAT YOU DO STYLES START */
-.steps { 
-  background: var(--primary-color);
-}
-
-.step {
-  margin: 50px auto;
-  padding-bottom: 50px;
-  width: 80%;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.step:last-child {
-  border-bottom: none;
-}
-
-.step h3 {
-  color: var(--secondary-color);
-  font-size: 46px;
-  flex: 1 30%;
-}
-
-.step-info {
-  flex: 2 70%;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-}
-
-.step-img {
-  flex: 1 12%;
-  margin-right: 20px;
-}
-
-.step-img img {
-  max-width: 100%;
-}
-
-.step-text {
-  flex: 12;
-}
-
-.step-text p {
-  color: var(--tertiary-color);
-  font-size: 18px;
-}
-
-.step-text h4 {
-  font-size: 26px;
-  line-height: 1.5;
-  color: var(--secondary-color);
-}
-/* WHAT YOU DO STYLES END */
-
-/* MEET THE TRAINERS START */
-.trainers {
-  width: 100%;
-  margin: 0 auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-.trainer {
-  margin: 20px;
-  flex: 1;
-  background: var(--secondary-color);
-  color: var(--primary-color);
-}
-
-.trainer img {
-  width: 100%;
-}
-
-.trainer-bio {
-  padding: 25px;
-  line-height: 1.3;
-}
-
-.trainer-bio h3 {
-  font-size: 28px;
-}
-
-.trainer-bio h4 {
-  font-weight: lighter;
-  font-size: 22px;
-  margin-bottom: 15px;
-}
-
-.trainer-bio p {
-  font-size: 17px;
-}
-/* TRAINER STYLES END */
-
-/* REACH OUT STYLES START */
-.contact {
-  background: var(--secondary-color);
-}
-
-.contact h2 {
-  color: var(--primary-color);
-}
-
-.contact-info {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.contact-info > * {
-  flex: 1;
-  margin: 15px;
-}
-
-.contact-info iframe {
-  height: 400px;
-}
-
-.contact-info div {
-  color: white;
-}
-
-.contact-info h3 {
-  color: var(--primary-color);
-  font-size: 32px;
-}
-
-.contact-info p, .contact-info address {
-  margin: 20px 0;
-  line-height: 1.5;
-  font-size: 16px;
-  font-style: normal;
-}
-
-.contact-form input, .contact-form textarea {
-  border: 1px solid var(--secondary-color);
-  display: block;
-  padding: 7px 15px;
-  font-size: 16px;
-  color: var(--secondary-color);
-  width: 100%;
-  margin-bottom: 15px;
-  margin-top: 5px;
-  border-radius: 10px;
-  background-color: rgba(255,255,255, 0.75);
-}
-
-.contact-form input:focus, .contact-form textarea:focus {
-  background-color: rgba(255,255,255, 1);
-  outline: none;
-}
-
-.contact-form button {
-  width: 100%;
-  border: none;
-  background: var(--primary-color);
-  color: var(--secondary-color);
-  text-align: center;
-  padding: 15px 0;
-  font-size: 16px;
-  border-radius: 10px;
-}
-
-.contact-form button:hover {
-  color: var(--primary-color);
-  background: var(--tertiary-color);
-}
-
-.contact-info a {
-  color: var(--primary-color);
-}
-/* REACH OUT STYLES END */
-
-/* UTILITIES */
-.text-left {
-  text-align: left;
-}
-
-.text-right {
-  text-align: right;
-}
-
-.flex-row {
-  display: flex;
-}
-
-
-
-/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
-@media screen and (max-width: 980px) {
-  header {
-    padding-bottom: 0;
-    justify-content: center;
-    position: relative;
-  }
-
-  header h1 {
-    width: 100%;
-    text-align: center;
-  }
-
-  header nav ul {
-    margin-top: 20px;
-    width: 100%;
-    justify-content: center;
-  }
-
-  header nav ul li a {
-    font-size: 20px;
-  }
-
-  footer h2, footer div {
-    text-align: center;
-    width: 100%;
-  }
-
-  .hero-cta, .hero-form {
-    width: 100%;
-  }
-  
-  .hero-cta {
-    text-align: center;
-  }
-
-  .section-title {
-    width: 80%;
-  }
-  
-  .trainer {
-    flex: 0 70%;
-  }
-  
-  .contact-info iframe{
-    flex: 1 100%;
-  }
-}
-
-/* MEDIA QUERY FOR TABLETS AND SMALLER */
-@media screen and (max-width: 768px) {
-  section {
-    padding: 30px 15px;
-  }
-
-  .step h3 {
-    flex: 1 100%;
-    text-align: center;
-  }
-
-  .step-info {
-    flex: 2 100%;
-    text-align: center;
-    justify-content: center;
-  }
-
-  .step-img {
-    flex: 0 32%;
-    margin-right: 0;
-    margin-top: 15px;
-    margin-bottom: 15px;
-  }
-
-  .step-text {
-    flex: 100%;  
-  }
-
-  .trainer-bio h3, .trainer-bio h4 {
-    display: block;
-  }
-}
-
-/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
-@media screen and (max-width: 575px) {
-  .hero-form button {
-    width: 100%;
-  }
-
-  .section-title {
-    width: 95%;
-  }
-
-  .intro p {
-    width: 100%;
-  }
-
-  .trainer {
-    flex: 0 100%;
-  }
-
-  .contact-info {
-    text-align: center;
-  }
-
-  .contact-info > * {
-    flex: 0 100%;
-  }
-
-  .contact-form {
-    order: 3;
-  }
+    display:flex;
+    flex-wrap: wrap;
+    order:100;
+    border: 1px red solid;
 }
